<?xml version ="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">

<!--    Home Activity-->
    <shortcut
        android:enabled="true"
        android:icon="@drawable/home"
        android:shortcutId="home"
        android:shortcutLongLabel="@string/home_menu_item"
        android:shortcutShortLabel="@string/home_menu_item">

        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.xrcvc.e_library.MainActivity"
            android:targetPackage="com.xrcvc.e_library" />
    </shortcut>

    <!--    latest Arrivals Activity-->
    <shortcut
        android:enabled="true"
        android:icon="@drawable/latest_arrivals"
        android:shortcutId="Latest Arrivals"
        android:shortcutLongLabel="@string/latest_arrival"
        android:shortcutShortLabel="@string/latest_arrival">

        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.xrcvc.e_library.LatestArrival"
            android:targetPackage="com.xrcvc.e_library" />
    </shortcut>

    <!--    All Categories  Activity-->
    <shortcut
        android:enabled="true"
        android:icon="@drawable/all_categories"
        android:shortcutId="All Categories"
        android:shortcutLongLabel="@string/all_categories"
        android:shortcutShortLabel="@string/all_categories">

        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.xrcvc.e_library.AllCategory"
            android:targetPackage="com.xrcvc.e_library" />
    </shortcut>

    <!--    Account Dashboard  Activity-->
    <shortcut
        android:enabled="true"
        android:icon="@drawable/dashboard"
        android:shortcutId="Dashboard"
        android:shortcutLongLabel="@string/admin_dashboard_menu_item"
        android:shortcutShortLabel="@string/admin_dashboard_menu_item">

        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.xrcvc.e_library.AccountDashboard"
            android:targetPackage="com.xrcvc.e_library" />
    </shortcut>
</shortcuts>
